# cacli

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: ConversationView.tsx  SessionDetail.tsx  SessionList.tsx
src/cacli/: __init__.py  cli.py  runner.py  server.py  sessions.py  spawn.py  status.py  transcript_apply.py  types.py
src/cacli/providers/: __init__.py  base.py  claude.py  codex.py  cursor.py  gemini.py
tests/: test_transcript_apply.py
