[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cacli"
version = "0.1.0"
description = "Provider-agnostic CLI for running coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Taylor AI" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
cacli = "cacli.cli:main"

[project.urls]
Homepage = "https://github.com/taylorai/cacli"
Repository = "https://github.com/taylorai/cacli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["B008", "B904"]
