[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cacli"
version = "0.1.2"
description = "Provider-agnostic CLI for running coding agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Benjamin Anderson" }]

[project.scripts]
cacli = "cacli.cli:main"

[project.urls]
Homepage = "https://github.com/taylorai/cacli"
Repository = "https://github.com/taylorai/cacli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cacli = ["dashboard_dist/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B"]
ignore = ["B008", "B904"]
